unpackaged/main/default/objects/Increase_Rate__c/fields/Increase_Rate__c.field-meta.xml
<CustomField>
    <fullName>Increase_Rate__c</fullName>
    <label>Increase Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>