unpackaged/main/default/objects/Increase_Rate__c/fields/Increase_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Increase_Rate_Type__c</fullName>
    <label>Increase Rate Type</label>
    <referenceTo>Increase_Rate_Types__c</referenceTo>
    <relationshipLabel>Increase Rates</relationshipLabel>
    <relationshipName>Increase_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>