unpackaged/main/default/objects/Increase_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Increase_Rate_Type__c</columns>
    <columns>Increase_Rate__c</columns>
    <columns>Effective_From__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>